# ml-inference

./: .gitignore  README.md
harness/: params.py  run_submission.py  utils.py
harness/naive_mlp/: diagonalize_weights.py  export_mnist_data.py  naive_mlp.py  train_test_mlp_approx_relu.py
harness/naive_mlp/mnist/dataset/: prediction.txt
harness/submission/datasets/medium/: test_labels.txt
measurements/: README.md
measurements/large/: results-1.json  results-2.json
measurements/medium/: results-1.json  results-2.json
measurements/single/: results-1.json  results-2.json  results-3.json
measurements/small/: results-1.json  results-2.json  results-3.json
scripts/: build_task.sh  get_openfhe.sh
submission/: CMakeLists.txt
submission/include/: mlp_encryption_utils.h  mlp_heongpu.h  params.h  utils.h
submission/src/: client_decrypt_decode_heongpu.cu  client_encode_encrypt_input_heongpu.cu  client_key_generation_heongpu.cu  empty_stage.cu  mlp_encryption_utils.cpp  mlp_encryption_utils_heongpu.cu  mlp_heongpu.cu  mlp_openfhe.cpp  server_encrypted_compute.cpp  server_encrypted_compute_heongpu.cu
submission_remote/: server_encrypted_compute.py  submission_utils.py
submissions/mlp/: CMakeLists.txt
submissions/mlp/include/: mlp_encryption_utils.cuh  mlp_heongpu.cuh  params.cuh
submissions/mlp/src/: client_decrypt_decode_heongpu.cu  client_encode_encrypt_input_heongpu.cu  client_key_generation_heongpu.cu  mlp_encryption_utils_heongpu.cu  mlp_heongpu.cu  server_encrypted_compute_heongpu.cu
